# machinekit

./: .drone.yml  .travis.yml  CMakeLists.txt  README  README.asciidoc
.travis/: build_deb.sh  build_debs.sh  build_rip.sh  build_rip_helper.sh  docker_run.sh
projects/: CMakeLists.txt
projects/cmake/: FindReadline.cmake  UseHALComp.cmake
projects/emc/: CMakeLists.txt
projects/emc/iotask/: CMakeLists.txt
projects/emc/kinematics/: CMakeLists.txt
projects/emc/motion/: CMakeLists.txt
projects/emc/nml_intf/: CMakeLists.txt
projects/emc/pythonplugin/: CMakeLists.txt
projects/emc/task/: CMakeLists.txt
projects/hal/components/: sim_axis_hardware.comp
projects/hal/cython/machinekit/: CMakeLists.txt  hal_const.pxd
projects/hal/linuxcnchal/: CMakeLists.txt
projects/hal/linuxcnchal/include/: config_module.h
projects/hal/utils/: CMakeLists.txt  halcmd_completion.c
projects/inifile/: CMakeLists.txt
projects/libnml/: CMakeLists.txt
projects/machinetalk/mtalk/: CMakeLists.txt
projects/machinetalk/mtalk_proto/: CMakeLists.txt
projects/posemath/: CMakeLists.txt
projects/rs274ngc/: CMakeLists.txt
projects/rtapi/rtapi/: CMakeLists.txt
projects/rtapi/shmdrv/: CMakeLists.txt
projects/rtapi_math/: CMakeLists.txt
projects/scripts/: CMakeLists.txt  rtapi.ini.in
